# changelogtxt-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  README.md  ROADMAP.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: publish_all.yml
docs/: action.md
docs/stylesheets/: extra.css
src/changelogtxt_parser/: __init__.py  _cli.py  _utils.py  app.py  serdes.py  version.py
tests/: conftest.py  strategies.py  test_app.py  test_init.py  test_serdes.py  test_utils.py  test_version.py
