[build-system]
requires = ["setuptools>=65.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false, where = ["src"]}

[project]
name = "changelogtxt-parser"
version = "0.1.0"
description = "Parses changelog txt files"
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [
  { name = "Andrew Pikul", email = "ajpikul@gmail.com" },
  { name = "David Angarita", email = "davidangarita.sistemas@gmail.com" }
]
dependencies = [
    "packaging>=25.0",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
]

[tool.mypy]
files = ["src/changelogtxt_parser"]
